# shipping-labels

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/addresses/: admin.py  models.py  tasks.py  tests.py
backend/addresses/migrations/: 0001_initial.py
backend/addresses/providers/: base.py  google.py  smarty.py  usps.py
backend/addresses/services/: verify.py
backend/config/: celery.py  settings.py  urls.py
backend/core/: exceptions.py  logging.py  middleware.py  tests.py  urls.py
backend/imports/: admin.py  models.py  serializers.py  tasks.py  tests.py  tests_api.py  tests_tasks.py  urls.py  views.py
backend/imports/migrations/: 0001_initial.py
backend/shipments/: admin.py  models.py  serializers.py  tests.py  tests_api.py  urls.py  views.py
backend/shipments/migrations/: 0001_initial.py  0002_seed_presets.py  0003_from_address_verification.py
backend/shipments/services/: validation.py
backend/shipping/: serializers.py  services.py  tests_api.py  urls.py  views.py
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts  errors.ts  types.ts
frontend/src/app/: providers.tsx  router.tsx
frontend/src/components/ui/: resizable.tsx
frontend/src/features/checkout/: CheckoutPage.tsx  SuccessPage.tsx
frontend/src/features/common/: ConfirmDialog.tsx
frontend/src/features/layout/: AppShell.tsx
frontend/src/features/review/: ReviewPage.tsx
frontend/src/features/review/components/: ApplyPresetDialog.tsx  CreateAddressPresetDialog.tsx  (+3 more)
frontend/src/features/shipping/: ShippingPage.tsx
frontend/src/features/upload/: UploadPage.tsx
frontend/src/stores/: selection.store.ts  wizard.store.ts
